Fix GitHub Pages image loading and accessibility issues

--- a/debug_paths.html
+++ b/debug_paths.html
@@ -110,7 +110,7 @@
     <div class="debug-section">
         <h2>📋 手動路徑測試</h2>
         <div>
-            <label>測試路徑:</label>
+            <label for="manualPath">測試路徑:</label>
             <input type="text" id="manualPath" value="/Avatar/avatar-1.png" style="width: 300px; padding: 5px;">
             <button onclick="testManualPath()">測試</button>
         </div>
