--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                     <p>已選擇 <span id="selectedCount">0</span> 張圖片</p>
                 </div>
                 <div class="form-group">
-                    <label>批量添加標籤:</label>
+                    <label for="batchHashtagInput">批量添加標籤:</label>
                     <div class="hashtag-input-container">
                         <div id="batchHashtagTags" class="hashtag-tags"></div>
                         <input 
@@ -530,7 +530,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label>批量設定主題:</label>
+                    <label for="batchThemeInput">批量設定主題:</label>
                     <input 
                         type="text" 
                         id="batchThemeInput" 
